SECRET_KEY for tokens moved to secrets